--- a/dengue_prediction.ipynb
+++ b/dengue_prediction.ipynb
@@ -192,6 +192,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#weather station\n",
     "# Scrape from websites\n",
     "base_url = \"http://www.weather.gov.sg/files/dailydata/DAILYDATA_\" #S24_201911.csv\n",
     "\n",
@@ -236,6 +237,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Weather station \n",
     "station_dict = {24: 'Changi', 115: 'Tuas South', 122: 'Khatib', 108: 'Marina Barrage', 109: 'Ang Mo Kio'}\n",
     "stations_list = [24, 115, 122, 108, 109]\n",
     "\n",
@@ -256,6 +258,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#PSI\n",
     "raw_psi_df = pd.read_csv(\"Datasets/PSI Data/psi_df_2016_2019.csv\")\n",
     "\n",
     "#split to year month and week\n",
@@ -365,6 +368,64 @@
     "    output.writerow(row.values())\n",
     "\n",
     " "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#csv of unique locations in dengue location cluster (2014 to 2019)\n",
+    "location_dengue_df = pd.read_csv(\"Datasets/Dengue Location Cluster Data/location_dengue.csv\")\n",
+    "location_set = set()\n",
+    "for i in range(len(location_dengue_df)):\n",
+    "    location_set.add(location_dengue_df['address'][i])\n",
+    "\n",
+    "fileOutput = 'Datasets/unique_locations.csv'\n",
+    "outputFile = open(fileOutput, 'w')\n",
+    "output = csv.writer(outputFile)\n",
+    "output.writerow(['unique location', 'X', 'Y'])\n",
+    "for location in location_set:\n",
+    "    output.writerow([location])\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/local/lib/python3.7/site-packages/ipykernel_launcher.py:7: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  import sys\n",
+      "/usr/local/lib/python3.7/site-packages/ipykernel_launcher.py:8: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  \n"
+     ]
+    }
+   ],
+   "source": [
+    "#add x,y coordinates to the unique locations\n",
+    "unique_location_df = pd.read_csv(\"Datasets/unique_locations.csv\")\n",
+    "buildings_df = pd.read_csv(\"Datasets/buildings.csv\")\n",
+    "for i in range(len(unique_location_df)):\n",
+    "    for j in range(len(buildings_df)):\n",
+    "        if str.upper(str(unique_location_df['unique location'][i])) in str(buildings_df['ADDRESS'][j]):\n",
+    "            unique_location_df['X'][i] = buildings_df['X'][j]\n",
+    "            unique_location_df['Y'][i] = buildings_df['Y'][j]\n",
+    "            break\n",
+    "\n",
+    "csv_filename = \"Datasets/unique_locations.csv\"            \n",
+    "unique_location_df.to_csv(csv_filename, index=False)"
    ]
   },
   {
