--- a/dengue_prediction.ipynb
+++ b/dengue_prediction.ipynb
@@ -17,11 +17,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using TensorFlow backend.\n"
+     ]
+    }
+   ],
    "source": [
     "# Import data processing tools\n",
     "import pandas as pd\n",
@@ -233,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -284,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -312,7 +320,13 @@
     "day_col = pd.Series([], dtype='int32')\n",
     "week_col = pd.Series([], dtype='int32')\n",
     "locality_col = pd.Series([], dtype='str')\n",
+    "# shortcut_list = ['rd', 'jln', 'lor', 'dr', 'ave', 'st', 'pk', 'gdns', 'nth', \"s'goon\", 'ter']\n",
+    "# shortcut_dict = {'rd': 'Road', 'jln': 'Jalan', 'lor': 'Lorong', 'dr': 'Drive', 'ave': 'Avenue',\n",
+    "#                 'st': 'Street', 'pk' : 'Park', 'gdns' : 'Gardens', 'nth' : 'North', \"s'goon\" : 'Serangoon',\n",
+    "#                 'ter' : 'Terminal'}\n",
+    "\n",
     "for i in range(len(raw_location_dengue_df)):\n",
+    "#     address = []\n",
     "    year_col[i] = 2000 + int(str(raw_location_dengue_df['year_month_week_day'][i])[0:2])\n",
     "    month_col[i] = int(str(raw_location_dengue_df['year_month_week_day'][i])[2:4])\n",
     "    day_col[i] = int(str(raw_location_dengue_df['year_month_week_day'][i])[4:])\n",
@@ -321,6 +335,20 @@
     "    locality_col[i] = raw_location_dengue_df['locality'][i].split('/')[0]\n",
     "    #split location with '('\n",
     "    locality_col[i] = locality_col[i].split('(')[0]\n",
+    "#     address = locality_col[i].split(' ')\n",
+    "#     for j in range(len(address)):\n",
+    "#         for shortcut in shortcut_list:\n",
+    "#             if(str.lower(address[j]) == shortcut):\n",
+    "#                 address[j] = shortcut_dict[shortcut]\n",
+    "#                 break\n",
+    "#     print(address)\n",
+    "#     locality_col[i] = address[0]\n",
+    "#     print(locality_col[i])\n",
+    "#     for j in range(len(address)):\n",
+    "#         if j != 0 and address[j] != '':\n",
+    "#             locality_col[i] += \" \" + address[j]\n",
+    "    \n",
+    "        \n",
     "raw_location_dengue_df.insert(1, 'year', year_col)\n",
     "raw_location_dengue_df.insert(2, 'month', month_col)\n",
     "raw_location_dengue_df.insert(3, 'week', week_col)\n",
@@ -336,17 +364,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "dict_keys(['ADDRESS', 'BLK_NO', 'BUILDING', 'LATITUDE', 'LONGITUDE', 'LONGTITUDE', 'POSTAL', 'ROAD_NAME', 'SEARCHVAL', 'X', 'Y'])\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#path to json file\n",
     "# df = pd.read_json(\"Datasets/buildings.json\", orient=\"records\")\n",
@@ -372,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -395,24 +415,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/usr/local/lib/python3.7/site-packages/ipykernel_launcher.py:7: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  import sys\n",
-      "/usr/local/lib/python3.7/site-packages/ipykernel_launcher.py:8: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#add x,y coordinates to the unique locations\n",
     "unique_location_df = pd.read_csv(\"Datasets/unique_locations.csv\")\n",
@@ -425,6 +428,26 @@
     "            break\n",
     "\n",
     "csv_filename = \"Datasets/unique_locations.csv\"            \n",
+    "unique_location_df.to_csv(csv_filename, index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#add x,y coordinates to the unique locations\n",
+    "unique_location_df = pd.read_csv(\"Datasets/unique_locations copy.csv\")\n",
+    "buildings_df = pd.read_csv(\"Datasets/buildings copy.csv\")\n",
+    "for i in range(len(unique_location_df)):\n",
+    "    for j in range(len(buildings_df)):\n",
+    "        if str.upper(str(unique_location_df['unique location'][i])) in str(buildings_df['ADDRESS'][j]):\n",
+    "            unique_location_df['X'][i] = buildings_df['X'][j]\n",
+    "            unique_location_df['Y'][i] = buildings_df['Y'][j]\n",
+    "            break\n",
+    "\n",
+    "csv_filename = \"Datasets/unique_locations copy.csv\"            \n",
     "unique_location_df.to_csv(csv_filename, index=False)"
    ]
   },
