put lat and long for unique locations

--- a/dengue_prediction.ipynb
+++ b/dengue_prediction.ipynb
@@ -523,9 +523,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "IOPub data rate exceeded.\n",
+      "The notebook server will temporarily stop sending output\n",
+      "to the client in order to avoid crashing it.\n",
+      "To change this limit, set the config variable\n",
+      "`--NotebookApp.iopub_data_rate_limit`.\n",
+      "\n",
+      "Current values:\n",
+      "NotebookApp.iopub_data_rate_limit=1000000.0 (bytes/sec)\n",
+      "NotebookApp.rate_limit_window=3.0 (secs)\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "#path to json file\n",
     "# df = pd.read_json(\"Datasets/buildings.json\", orient=\"records\")\n",
@@ -539,6 +556,7 @@
     "outputFile = open(fileOutput, 'w')\n",
     "data = json.load(inputFile)\n",
     "inputFile.close()\n",
+    "print(data)\n",
     "\n",
     "output = csv.writer(outputFile)\n",
     "output.writerow(data[0].keys()) \n",
@@ -558,7 +576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -571,7 +589,7 @@
     "fileOutput = 'Datasets/unique_locations.csv'\n",
     "outputFile = open(fileOutput, 'w')\n",
     "output = csv.writer(outputFile)\n",
-    "output.writerow(['unique location', 'X', 'Y'])\n",
+    "output.writerow(['unique location'])\n",
     "for location in location_set:\n",
     "    output.writerow([location])\n",
     "    "
@@ -594,7 +612,7 @@
     "            unique_location_df['Y'][i] = buildings_df['Y'][j]\n",
     "            break\n",
     "\n",
-    "csv_filename = \"Datasets/unique_locations.csv\"            \n",
+    "csv_filename = \"Datasets/unique_locations_in_string_function_xy_new.csv\"            \n",
     "unique_location_df.to_csv(csv_filename, index=False)"
    ]
   },
@@ -621,9 +639,70 @@
     "            break\n",
     "\n",
     "print(count)\n",
-    "csv_filename = \"Datasets/unique_locations_fuzzywuzzy.csv\"\n",
+    "csv_filename = \"Datasets/unique_locations_fuzzywuzzy_60_xy.csv\"\n",
     "unique_location_df.insert(3, 'address from buildings', locality_col)\n",
     "unique_location_df.to_csv(csv_filename, index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Put in lat and long data to the unique locations"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fileInput = 'Datasets/unique_location_lat_long.json'\n",
+    "unique_location_df = pd.read_csv(\"Datasets/unique_locations_after_processing.csv\")\n",
+    "\n",
+    "inputFile = open(fileInput)\n",
+    "data = json.load(inputFile)\n",
+    "inputFile.close()\n",
+    "lat_col = pd.Series([], dtype='float64')\n",
+    "long_col = pd.Series([], dtype='float64')\n",
+    "\n",
+    "for i in range(len(unique_location_df)):\n",
+    "    if unique_location_df['unique location'][i] != 'nan':\n",
+    "        #print(unique_location_df['unique location'][i].strip())\n",
+    "        lat_col[i] = data[unique_location_df['unique location'][i].strip()]['lat']\n",
+    "        long_col[i] = data[unique_location_df['unique location'][i].strip()]['lng']\n",
+    "\n",
+    "unique_location_df.insert(1, 'lat', lat_col)\n",
+    "unique_location_df.insert(2, 'long', long_col)\n",
+    "\n",
+    "csv_filename = \"Datasets/unique_locations_lat_long.csv\"            \n",
+    "unique_location_df.to_csv(csv_filename, index=False)\n",
+    "    \n",
+    "#output.writerow(['unique location', 'lat', 'long'])\n",
+    "#print(data['Surin Ave\\n']['lat'])\n",
+    "\n",
+    "# for row in data:\n",
+    "#     output.writerow()\n",
+    "#     output.writerow(row.values())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Find nearest weather station to each unique location"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "unique_location_lat_long_df = pd.read_csv(\"Datasets/unique_locations_lat_long.csv\")\n",
+    "weatherstation_lat_long_df = pd.read_csv(\"Datasets/weatherstation_lat_long.csv\")\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -2977,7 +3056,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.1"
+   "version": "3.7.2"
   }
  },
  "nbformat": 4,
