--- a/dengue_prediction.ipynb
+++ b/dengue_prediction.ipynb
@@ -17,19 +17,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 77,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Using TensorFlow backend.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Import data processing tools\n",
     "import pandas as pd\n",
@@ -39,6 +31,9 @@
     "\n",
     "import csv, json, sys\n",
     "from fuzzywuzzy import fuzz\n",
+    "\n",
+    "import geopandas as gpd\n",
+    "from shapely.geometry import Point, Polygon\n",
     "\n",
     "# Import visualization tools\n",
     "import matplotlib.pyplot as plt\n",
@@ -601,6 +596,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#[IGNORE]\n",
     "#add x,y coordinates to the unique locations\n",
     "unique_location_df = pd.read_csv(\"Datasets/unique_locations.csv\")\n",
     "open_buildings_df = pd.read_csv(\"Datasets/buildings.csv\")\n",
@@ -622,6 +618,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#[IGNORE]\n",
     "#add x,y coordinates to the unique locations\n",
     "unique_location_df = pd.read_csv(\"Datasets/unique_locations.csv\")\n",
     "open_buildings_df = pd.read_csv(\"Datasets/buildings.csv\")\n",
@@ -702,7 +699,8 @@
     "unique_location_lat_long_df = pd.read_csv(\"Datasets/unique_locations_lat_long.csv\")\n",
     "weatherstation_lat_long_df = pd.read_csv(\"Datasets/weatherstation_lat_long.csv\")\n",
     "\n",
-    "\n"
+    "for i in range(len(unique_location_lat_long_df)):\n",
+    "    \n"
    ]
   },
   {
