--- a/dengue_prediction.ipynb
+++ b/dengue_prediction.ipynb
@@ -2538,314 +2538,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 146,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Year</th>\n",
-       "      <th>Week</th>\n",
-       "      <th>Max Daily Rainfall Total (mm)</th>\n",
-       "      <th>Min Daily Rainfall Total (mm)</th>\n",
-       "      <th>Average Daily Rainfall Total (mm)</th>\n",
-       "      <th>Highest 30 Min Rainfall (mm)</th>\n",
-       "      <th>Highest 60 Min Rainfall (mm)</th>\n",
-       "      <th>Highest 120 Min Rainfall (mm)</th>\n",
-       "      <th>Mean Temperature (°C)</th>\n",
-       "      <th>Maximum Temperature (°C)</th>\n",
-       "      <th>Minimum Temperature (°C)</th>\n",
-       "      <th>Mean Wind Speed (km/h)</th>\n",
-       "      <th>Max Wind Speed (km/h)</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2014.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>57.6</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>6.848000</td>\n",
-       "      <td>30.6</td>\n",
-       "      <td>42.2</td>\n",
-       "      <td>52.0</td>\n",
-       "      <td>26.612000</td>\n",
-       "      <td>32.4</td>\n",
-       "      <td>23.3</td>\n",
-       "      <td>7.096000</td>\n",
-       "      <td>72.4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2014.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>61.8</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>7.931429</td>\n",
-       "      <td>19.4</td>\n",
-       "      <td>24.4</td>\n",
-       "      <td>24.8</td>\n",
-       "      <td>26.551429</td>\n",
-       "      <td>34.0</td>\n",
-       "      <td>23.2</td>\n",
-       "      <td>6.460000</td>\n",
-       "      <td>66.2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2014.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.028571</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>26.288571</td>\n",
-       "      <td>31.0</td>\n",
-       "      <td>23.3</td>\n",
-       "      <td>10.185714</td>\n",
-       "      <td>45.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2014.0</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>25.834286</td>\n",
-       "      <td>31.0</td>\n",
-       "      <td>22.4</td>\n",
-       "      <td>9.882857</td>\n",
-       "      <td>45.4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2014.0</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>26.285714</td>\n",
-       "      <td>34.3</td>\n",
-       "      <td>21.9</td>\n",
-       "      <td>10.137143</td>\n",
-       "      <td>42.8</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>298</th>\n",
-       "      <td>2019.0</td>\n",
-       "      <td>38.0</td>\n",
-       "      <td>40.5</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>2.060000</td>\n",
-       "      <td>31.0</td>\n",
-       "      <td>40.0</td>\n",
-       "      <td>40.5</td>\n",
-       "      <td>28.653143</td>\n",
-       "      <td>34.0</td>\n",
-       "      <td>21.5</td>\n",
-       "      <td>10.002857</td>\n",
-       "      <td>46.1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>299</th>\n",
-       "      <td>2019.0</td>\n",
-       "      <td>39.0</td>\n",
-       "      <td>39.8</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>5.743810</td>\n",
-       "      <td>14.6</td>\n",
-       "      <td>23.6</td>\n",
-       "      <td>28.2</td>\n",
-       "      <td>28.153571</td>\n",
-       "      <td>34.9</td>\n",
-       "      <td>22.8</td>\n",
-       "      <td>8.284286</td>\n",
-       "      <td>47.2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>300</th>\n",
-       "      <td>2019.0</td>\n",
-       "      <td>40.0</td>\n",
-       "      <td>53.6</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>5.794286</td>\n",
-       "      <td>24.8</td>\n",
-       "      <td>29.8</td>\n",
-       "      <td>30.2</td>\n",
-       "      <td>27.523571</td>\n",
-       "      <td>34.2</td>\n",
-       "      <td>22.5</td>\n",
-       "      <td>7.799524</td>\n",
-       "      <td>60.5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>301</th>\n",
-       "      <td>2019.0</td>\n",
-       "      <td>41.0</td>\n",
-       "      <td>27.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>4.702857</td>\n",
-       "      <td>19.5</td>\n",
-       "      <td>23.0</td>\n",
-       "      <td>27.0</td>\n",
-       "      <td>27.998857</td>\n",
-       "      <td>34.5</td>\n",
-       "      <td>22.6</td>\n",
-       "      <td>7.262857</td>\n",
-       "      <td>47.5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>302</th>\n",
-       "      <td>2019.0</td>\n",
-       "      <td>42.0</td>\n",
-       "      <td>19.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.942857</td>\n",
-       "      <td>14.4</td>\n",
-       "      <td>18.6</td>\n",
-       "      <td>19.0</td>\n",
-       "      <td>28.534286</td>\n",
-       "      <td>34.8</td>\n",
-       "      <td>22.5</td>\n",
-       "      <td>7.437143</td>\n",
-       "      <td>48.6</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>303 rows × 13 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "       Year  Week  Max Daily Rainfall Total (mm)  \\\n",
-       "0    2014.0   1.0                           57.6   \n",
-       "1    2014.0   2.0                           61.8   \n",
-       "2    2014.0   3.0                            1.0   \n",
-       "3    2014.0   4.0                            0.0   \n",
-       "4    2014.0   5.0                            0.0   \n",
-       "..      ...   ...                            ...   \n",
-       "298  2019.0  38.0                           40.5   \n",
-       "299  2019.0  39.0                           39.8   \n",
-       "300  2019.0  40.0                           53.6   \n",
-       "301  2019.0  41.0                           27.0   \n",
-       "302  2019.0  42.0                           19.0   \n",
-       "\n",
-       "     Min Daily Rainfall Total (mm)  Average Daily Rainfall Total (mm)  \\\n",
-       "0                              0.0                           6.848000   \n",
-       "1                              0.0                           7.931429   \n",
-       "2                              0.0                           0.028571   \n",
-       "3                              0.0                           0.000000   \n",
-       "4                              0.0                           0.000000   \n",
-       "..                             ...                                ...   \n",
-       "298                            0.0                           2.060000   \n",
-       "299                            0.0                           5.743810   \n",
-       "300                            0.0                           5.794286   \n",
-       "301                            0.0                           4.702857   \n",
-       "302                            0.0                           1.942857   \n",
-       "\n",
-       "     Highest 30 Min Rainfall (mm)  Highest 60 Min Rainfall (mm)  \\\n",
-       "0                            30.6                          42.2   \n",
-       "1                            19.4                          24.4   \n",
-       "2                             1.0                           1.0   \n",
-       "3                             0.0                           0.0   \n",
-       "4                             0.0                           0.0   \n",
-       "..                            ...                           ...   \n",
-       "298                          31.0                          40.0   \n",
-       "299                          14.6                          23.6   \n",
-       "300                          24.8                          29.8   \n",
-       "301                          19.5                          23.0   \n",
-       "302                          14.4                          18.6   \n",
-       "\n",
-       "     Highest 120 Min Rainfall (mm)  Mean Temperature (°C)  \\\n",
-       "0                             52.0              26.612000   \n",
-       "1                             24.8              26.551429   \n",
-       "2                              1.0              26.288571   \n",
-       "3                              0.0              25.834286   \n",
-       "4                              0.0              26.285714   \n",
-       "..                             ...                    ...   \n",
-       "298                           40.5              28.653143   \n",
-       "299                           28.2              28.153571   \n",
-       "300                           30.2              27.523571   \n",
-       "301                           27.0              27.998857   \n",
-       "302                           19.0              28.534286   \n",
-       "\n",
-       "     Maximum Temperature (°C)  Minimum Temperature (°C)  \\\n",
-       "0                        32.4                      23.3   \n",
-       "1                        34.0                      23.2   \n",
-       "2                        31.0                      23.3   \n",
-       "3                        31.0                      22.4   \n",
-       "4                        34.3                      21.9   \n",
-       "..                        ...                       ...   \n",
-       "298                      34.0                      21.5   \n",
-       "299                      34.9                      22.8   \n",
-       "300                      34.2                      22.5   \n",
-       "301                      34.5                      22.6   \n",
-       "302                      34.8                      22.5   \n",
-       "\n",
-       "     Mean Wind Speed (km/h)  Max Wind Speed (km/h)  \n",
-       "0                  7.096000                   72.4  \n",
-       "1                  6.460000                   66.2  \n",
-       "2                 10.185714                   45.0  \n",
-       "3                  9.882857                   45.4  \n",
-       "4                 10.137143                   42.8  \n",
-       "..                      ...                    ...  \n",
-       "298               10.002857                   46.1  \n",
-       "299                8.284286                   47.2  \n",
-       "300                7.799524                   60.5  \n",
-       "301                7.262857                   47.5  \n",
-       "302                7.437143                   48.6  \n",
-       "\n",
-       "[303 rows x 13 columns]"
-      ]
-     },
-     "execution_count": 145,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "Singapore_df = pd.DataFrame(columns=columns)\n",
     "for i in range(303):\n",
@@ -2914,8 +2609,164 @@
     "    maxWind = maxWindSerie.max() \n",
     "    Singapore_df.loc[i] = [int(rowChangi['Year']), int(rowChangi['Week']), maxRain, minRain, avgRain, max30Rain, max60Rain, max120Rain, avgTemp,\n",
     "                                         maxTemp, minTemp, avgWind, maxWind]\n",
-    "Singapore_df.to_csv(TuasSouth_csv_filename, index=False)"
+    "\n",
+    "Singapore_csv_filename = \"Datasets/Weather Data/Weekly Singapore.csv\" \n",
+    "Singapore_df.to_csv(Singapore_csv_filename, index=False)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Extract newly increased(last two weeks) on weekly basis"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "columns = ['date', 'week', 'cases with onset in last 2 weeks']\n",
+    "SG_2014_cases_df = pd.DataFrame(columns=columns) \n",
+    "raw_2014_location_df = pd.read_csv(\"Datasets/Dengue Location Cluster Data/2014-Dengue-Cluster.csv\")\n",
+    "arr = raw_2014_location_df['date'].unique()\n",
+    "index = 0\n",
+    "for i in arr:\n",
+    "    temp_df = raw_2014_location_df[raw_2014_location_df['date'] == i]\n",
+    "    num = temp_df['cases with onset in laStreet 2 weeks'].sum()\n",
+    "    week = datetime.strptime('20' + str(i), \"%Y%m%d\").date().isocalendar()[1]\n",
+    "    SG_2014_cases_df.loc[index] = [i, week, num]\n",
+    "    index = index + 1\n",
+    "\n",
+    "\n",
+    "Singapore_2014_csv_filename = \"Datasets/Dengue Location Cluster Data/Singapore-2014-Dengue.csv\" \n",
+    "SG_2014_cases_df.astype('int64').to_csv(Singapore_2014_csv_filename, index=False)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "columns = ['date', 'week', 'cases with onset in last 2 weeks']\n",
+    "SG_2015_cases_df = pd.DataFrame(columns=columns) \n",
+    "raw_2015_location_df = pd.read_csv(\"Datasets/Dengue Location Cluster Data/2015-Dengue-Cluster.csv\")\n",
+    "arr = raw_2015_location_df['date'].unique()\n",
+    "index = 0\n",
+    "for i in arr:\n",
+    "    temp_df = raw_2015_location_df[raw_2015_location_df['date'] == i]\n",
+    "    num = temp_df['cases with onset in laStreet 2 weeks'].astype('int64').sum()\n",
+    "    week = datetime.strptime('20' + str(i), \"%Y%m%d\").date().isocalendar()[1]\n",
+    "    SG_2015_cases_df.loc[index] = [i, week, num]\n",
+    "    index = index + 1\n",
+    "\n",
+    "\n",
+    "Singapore_2015_csv_filename = \"Datasets/Dengue Location Cluster Data/Singapore-2015-Dengue.csv\" \n",
+    "SG_2015_cases_df.to_csv(Singapore_2015_csv_filename, index=False)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "columns = ['date', 'week', 'cases with onset in last 2 weeks']\n",
+    "SG_2016_cases_df = pd.DataFrame(columns=columns) \n",
+    "raw_2016_location_df = pd.read_csv(\"Datasets/Dengue Location Cluster Data/2016-Dengue-Cluster.csv\")\n",
+    "arr = raw_2016_location_df['date'].unique()\n",
+    "index = 0\n",
+    "for i in arr:\n",
+    "    temp_df = raw_2016_location_df[raw_2016_location_df['date'] == i]\n",
+    "    num = temp_df['cases with onset in laStreet 2 weeks'].sum()\n",
+    "    week = datetime.strptime('20' + str(i), \"%Y%m%d\").date().isocalendar()[1]\n",
+    "    SG_2016_cases_df.loc[index] = [i, week, num]\n",
+    "    index = index + 1\n",
+    "\n",
+    "\n",
+    "Singapore_2016_csv_filename = \"Datasets/Dengue Location Cluster Data/Singapore-2016-Dengue.csv\" \n",
+    "SG_2016_cases_df.astype('int64').to_csv(Singapore_2016_csv_filename, index=False)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "columns = ['date', 'week', 'cases with onset in last 2 weeks']\n",
+    "SG_2017_cases_df = pd.DataFrame(columns=columns) \n",
+    "raw_2017_location_df = pd.read_csv(\"Datasets/Dengue Location Cluster Data/raw-2017-Dengue-Cluster.csv\")\n",
+    "arr = raw_2017_location_df['S/N'].unique()\n",
+    "index = 0\n",
+    "for i in arr:\n",
+    "    temp_df = raw_2017_location_df[raw_2017_location_df['S/N'] == i]\n",
+    "    num = temp_df['Cases with onset in last 2weeks'].sum()\n",
+    "    week = datetime.strptime('20' + str(i), \"%Y%m%d\").date().isocalendar()[1]\n",
+    "    SG_2017_cases_df.loc[index] = [i, week, num]\n",
+    "    index = index + 1\n",
+    "\n",
+    "\n",
+    "Singapore_2017_csv_filename = \"Datasets/Dengue Location Cluster Data/Singapore-2017-Dengue.csv\" \n",
+    "SG_2017_cases_df.astype('int64').to_csv(Singapore_2017_csv_filename, index=False)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "columns = ['date', 'week', 'cases with onset in last 2 weeks']\n",
+    "SG_2018_cases_df = pd.DataFrame(columns=columns) \n",
+    "raw_2018_location_df = pd.read_csv(\"Datasets/Dengue Location Cluster Data/2018-Dengue-Cluster.csv\")\n",
+    "arr = raw_2018_location_df['date'].unique()\n",
+    "index = 0\n",
+    "for i in arr:\n",
+    "    temp_df = raw_2018_location_df[raw_2018_location_df['date'] == i]\n",
+    "    num = temp_df['cases with onset in laStreet 2 weeks'].sum()\n",
+    "    week = datetime.strptime('20' + str(i), \"%Y%m%d\").date().isocalendar()[1]\n",
+    "    SG_2018_cases_df.loc[index] = [i, week, num]\n",
+    "    index = index + 1\n",
+    "\n",
+    "\n",
+    "Singapore_2018_csv_filename = \"Datasets/Dengue Location Cluster Data/Singapore-2018-Dengue.csv\" \n",
+    "SG_2018_cases_df.astype('int64').to_csv(Singapore_2018_csv_filename, index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "columns = ['date', 'week', 'cases with onset in last 2 weeks']\n",
+    "SG_2019_cases_df = pd.DataFrame(columns=columns) \n",
+    "raw_2019_location_df = pd.read_csv(\"Datasets/Dengue Location Cluster Data/2019-Dengue-Cluster.csv\")\n",
+    "arr = raw_2019_location_df['date'].unique()\n",
+    "index = 0\n",
+    "for i in arr:\n",
+    "    temp_df = raw_2019_location_df[raw_2019_location_df['date'] == i]\n",
+    "    num = temp_df['cases with onset in laStreet 2 weeks'].sum()\n",
+    "    week = datetime.strptime('20' + str(i), \"%Y%m%d\").date().isocalendar()[1]\n",
+    "    SG_2019_cases_df.loc[index] = [i, week, num]\n",
+    "    index = index + 1\n",
+    "\n",
+    "\n",
+    "Singapore_2019_csv_filename = \"Datasets/Dengue Location Cluster Data/Singapore-2019-Dengue.csv\" \n",
+    "SG_2019_cases_df.astype('int64').to_csv(Singapore_2019_csv_filename, index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
