shift the files for model training to a folder named Model Training merged data

--- a/dengue_prediction.ipynb
+++ b/dengue_prediction.ipynb
@@ -4399,7 +4399,7 @@
     "del SG_weather_df['Year']  \n",
     "del SG_weather_df['Week']  \n",
     "result = pd.concat([new_SG_two_weeks_cases, SG_weather_df], axis=1).reindex(new_SG_two_weeks_cases.index)\n",
-    "result.to_csv(\"Datasets/Singapore Weather and Cases.csv\", index=False)"
+    "result.to_csv(\"Datasets/Model Training merged data/Singapore Weather and Cases.csv\", index=False)"
    ]
   },
   {
